creating a new game works. temp score change tally is working locally. game types can be added
